# dl-benchmark

./: .gitignore  README.md  requirements.txt  requirements_linux.txt  requirements_windows.txt
.github/workflows/: codestyle.yml  smoke_test.yml  unit_test.yml
src/accuracy_checker/: output.py
src/benchmark/: README.md  config_parser.py  config_parser_factory.py  config_processor.py  executors.py  framework_wrapper.py  inference_benchmark.py  output.py  processes.py  test_config_parser.py
src/benchmark/config_parser/: framework_independent_parameters.py  framework_parameters_parser.py  test_config_parser.py
src/benchmark/frameworks/: framework_wrapper.py  framework_wrapper_registry.py  intel_caffe.py  known_frameworks.py  openvino.py  processes.py  tensorflow.py
src/benchmark/tests/: executors_test.py  test_executor.py  test_processes.py
src/configs/: README.md  benchmark_configuration_file_template.xml
src/configs/local_configs/: benchmark_configuration_file.xml
src/conversion_scripts/: README.md  tflite_converter.py
src/inference/: README.md  inference_async_mode.py  inference_tensorflowlite.py  io_adapter.py  transformer.py
src/local_control/: README.md  local_start.py  proc_utils.py
src/onnxruntime_benchmark/: .clang-format  CMakeLists.txt  README.md  main.cpp
src/onxxruntime_benchmark/: CMakeLists.txt  main.cpp
src/remote_control/: remote_start.py
src/utils/: cmd_handler.py  csv_wrapper.py
test/smoke_test/: README.md  run_ac_smoke_test.sh  run_smoke_test.sh  smoke_config.xml  smoke_config_accuracy.xml
(+46 files in other folders)
